refactor cluster apis upgrade go1.17
