# docs/swagger.json
@@ -37,11 +37,13 @@
                     },
                     {
                         "type": "integer",
+                        "default": 10,
                         "name": "limit",
                         "in": "query"
                     },
                     {
                         "type": "integer",
+                        "default": 0,
                         "name": "offset",
                         "in": "query"
                     },
@@ -58,7 +60,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.ClusterListResponse"
+                            "$ref": "#/definitions/cluster.ListResponse"
                         }
                     },
                     "404": {
@@ -76,7 +78,7 @@
                     "default": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/handlers.ClusterListResponse"
+                            "$ref": "#/definitions/cluster.ListResponse"
                         }
                     }
                 }
@@ -96,12 +98,12 @@
                         "required": true
                     },
                     {
-                        "description": "Create cluster",
+                        "description": "request",
                         "name": "cluster",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.CreateClusterRequest"
+                            "$ref": "#/definitions/cluster.CreateClusterRequest"
                         }
                     }
                 ],
@@ -133,7 +135,7 @@
                 }
             }
         },
-        "/namespaces/{namespace}/clusters/{cluster}": {
+        "/namespaces/{namespace}/clusters/{name}": {
             "get": {
                 "tags": [
                     "clusters"
@@ -151,7 +153,7 @@
                     {
                         "type": "string",
                         "description": "Cluster name",
-                        "name": "cluster",
+                        "name": "name",
                         "in": "path",
                         "required": true
                     }
@@ -200,7 +202,7 @@
                     {
                         "type": "string",
                         "description": "Cluster name",
-                        "name": "cluster",
+                        "name": "name",
                         "in": "path",
                         "required": true
                     }
@@ -249,17 +251,17 @@
                     {
                         "type": "string",
                         "description": "Cluster name",
-                        "name": "cluster",
+                        "name": "name",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "Patch cluster",
+                        "description": "request",
                         "name": "cluster",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.UpdateClusterRequest"
+                            "$ref": "#/definitions/cluster.UpdateClusterRequest"
                         }
                     }
                 ],
@@ -290,16 +292,122 @@
                     }
                 }
             }
+        },
+        "/namespaces/{namespace}/clusters/{name}/config": {
+            "get": {
+                "tags": [
+                    "clusters"
+                ],
+                "summary": "Get cluster config",
+                "operationId": "getClusterConfig",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Namespace name",
+                        "name": "namespace",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Cluster name",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/cluster.Config"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/cluster.Config"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "clusters"
+                ],
+                "summary": "Put cluster config",
+                "operationId": "putClusterConfig",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Namespace name",
+                        "name": "namespace",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Cluster name",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "config",
+                        "name": "cluster",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/cluster.Config"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
         "cluster.Cluster": {
             "type": "object",
             "properties": {
-                "config": {
-                    "type": "string"
-                },
-                "createdTime": {
+                "creationTime": {
                     "type": "string"
                 },
                 "description": {
@@ -310,7 +418,26 @@
                 }
             }
         },
-        "handlers.ClusterListResponse": {
+        "cluster.Config": {
+            "type": "object",
+            "properties": {
+                "config": {
+                    "type": "string"
+                }
+            }
+        },
+        "cluster.CreateClusterRequest": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "cluster.ListResponse": {
             "type": "object",
             "properties": {
                 "items": {
@@ -324,26 +451,9 @@
                 }
             }
         },
-        "handlers.CreateClusterRequest": {
+        "cluster.UpdateClusterRequest": {
             "type": "object",
             "properties": {
-                "config": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "handlers.UpdateClusterRequest": {
-            "type": "object",
-            "properties": {
-                "config": {
-                    "type": "string"
-                },
                 "description": {
                     "type": "string"
                 }
