# pkg/apiserver/router.go
@@ -4,7 +4,7 @@ import (
 	swagger "github.com/arsmn/fiber-swagger/v2"
 	"github.com/gofiber/fiber/v2"
 	_ "github.com/majian159/kubelemon/docs"
-	"github.com/majian159/kubelemon/pkg/apiserver/handlers"
+	"github.com/majian159/kubelemon/pkg/apiserver/handlers/cluster"
 )
 
 // @title KubeLemon API
@@ -17,7 +17,6 @@ import (
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
 // @BasePath /api/v1alpha1
 func registerRoute(app *fiber.App) {
-
 	// swagger
 	{
 		app.Get("/swagger/*", swagger.Handler)
@@ -27,17 +26,8 @@ func registerRoute(app *fiber.App) {
 	}
 
 	v1Group := app.Group("/api/v1alpha1")
-	_ = v1Group
 
 	nsGroup := v1Group.Group("/namespaces/:namespace")
 
-	{
-		clusterGroup := nsGroup.Group("/clusters")
-		clusterGroup.Get("/", handlers.ListCluster)
-		clusterGroup.Get("/:name", handlers.GetCluster)
-		clusterGroup.Post("/", handlers.CreateCluster)
-		clusterGroup.Patch("/:name", handlers.UpdateCluster)
-		clusterGroup.Delete("/:name", handlers.DeleteCluster)
-	}
-
+	cluster.RegisterRoutes(nsGroup.Group("/clusters"))
 }
